# api/api.pb.gw.go
@@ -156,6 +156,15 @@ func request_ApiService_CompleteTalk_0(ctx context.Context, marshaler runtime.Ma
 
 }
 
+func request_ApiService_ListTalks_0(ctx context.Context, marshaler runtime.Marshaler, client ApiServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq ListTalksRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.ListTalks(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
 // RegisterApiServiceHandlerFromEndpoint is same as RegisterApiServiceHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
 func RegisterApiServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
@@ -418,6 +427,35 @@ func RegisterApiServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn 
 
 	})
 
+	mux.Handle("GET", pattern_ApiService_ListTalks_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(ctx)
+		defer cancel()
+		if cn, ok := w.(http.CloseNotifier); ok {
+			go func(done <-chan struct{}, closed <-chan bool) {
+				select {
+				case <-done:
+				case <-closed:
+					cancel()
+				}
+			}(ctx.Done(), cn.CloseNotify())
+		}
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_ApiService_ListTalks_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ApiService_ListTalks_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -437,6 +475,8 @@ var (
 	pattern_ApiService_AddTalk_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "talk"}, ""))
 
 	pattern_ApiService_CompleteTalk_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "talk", "complete"}, ""))
+
+	pattern_ApiService_ListTalks_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "talk"}, ""))
 )
 
 var (
@@ -455,4 +495,6 @@ var (
 	forward_ApiService_AddTalk_0 = runtime.ForwardResponseMessage
 
 	forward_ApiService_CompleteTalk_0 = runtime.ForwardResponseMessage
+
+	forward_ApiService_ListTalks_0 = runtime.ForwardResponseMessage
 )
